--- a/source/styles/style.css
+++ b/source/styles/style.css
@@ -3,8 +3,11 @@ body{
     color: white;
 }
 
-#button{
-    color:black;
-    background: green;
-    border: none;
+#carre{
+    border : 1px solid red;
+    height: 60px;
+    width: 60px;
+    margin-top: 100px;
+    background: red;
+    margin: auto;
 }
