--- a/source_1/styles/style.css
+++ b/source_1/styles/style.css
@@ -1,13 +1,14 @@
 body{
     background: black;
-    color: white;
+
 }
 
-#carre{
+#square{
     border : 1px solid red;
     height: 60px;
     width: 60px;
-    margin-top: 100px;
     background: red;
+    position: relative;
     margin: auto;
+    text-align: center;
 }
